# ExpComp

./: .gitignore  README.md  pyproject.toml
src/expcomp/: __init__.py  condition.py
src/expcomp/evaluation/: metric.py
src/expcomp/experiments/: __init__.py  experiment.py  experiment_comparaisor.py  experiment_config.py  experiment_loader.py
tests/: test_condition.py
tests/evaluation/: test_metric.py
tests/experiments/: test_experiment_comparaisor.py  test_experiment_config.py  test_experiment_loader.py
