[project]
name = "expcomp"
version = "1.1.3"
description = ""
authors = [
    {name = "yassine rachidy",email = "ya.rachidy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
packages = [{include = "expcomp", from = "src"}]

[tool.poetry.dependencies]
pyaml = ">=25.0.0"
loguru = { version = "^0.7.3", python = ">=3.11,<4.0" }
pandas = "^2.2.3"
wandb = "^0.19.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
